Fixed tooltip contrast

--- a/resources/css/styles.css
+++ b/resources/css/styles.css
@@ -10,7 +10,7 @@ body {
 
 #text {
   background-color: #0084ff;
-  color: #1e1e21;
+  color: white;
   padding: 10px;
   border-radius: 0px 0px 5px 5px;
 }
